--- a/index.html
+++ b/index.html
@@ -4,8 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css/asignmnt.css">
 </head>
+<header>
+    <!-- banner -->
+     <section class="banner">
+        <div>
+            <h2 class="banner-h1">"In the near future, I hope to become a <br> Developer."</h2>
+            <p class="banner-h2">When was a kid, I had to learn some language to express myself. With that foundation, <br> our brain can build on that as we learn a second or third language using syntax and grammar.</p>
+        </div>
+        <div class="banner-image">
+            <img src="./assets/Group.png" alt="">
+        </div>
+       <div id="btn">
+        <button class="banner-btn">Contact with me</button>
+       </div>
+     </section>
+</header>
 <body>
-    
+    <main>
+        <!-- article section -->
+  
+  <section class="article-section-1">
+    <div id="head">
+        <h2>Why Web Development??</h2>
+        <p>Web Development is a great work in global,it's a strong skill that we earn by hardwork and pation</p>
+       </div>
+       <section class="section-1">
+        <div class="left-1">
+            <h3>I will Do Coding and Change The <br>World</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button>Learn More</button>
+        </div>
+        <div>
+            <img src="./assets/Layer_1.png" alt="">
+        </div>
+       </section>
+       <section class="section-2">
+        <div class="left-2">
+            <img src="./assets/Group 3.png" alt="">
+        </div>
+        <div class="right-2">
+            <h3>I will help People by creating Modern <br> Web System</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <button>Learn more</button>
+        </div>
+       </section>
+       <section class="section-3">
+        <div class="left-3">
+        <h3>
+            I will Do Coding and Change The World
+        </h3>
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+        <button> Learn More</button>
+        </div>
+        <div>
+        <img src="./assets/Group 4.png" alt="">
+        </div>
+       </section>
+  </section>
+  <section class="easy">
+    <div id="header">
+        <h2>Why Web Development??</h2>
+        <p>Web Development is a great work in global,it's a strong skill that we earn by hardwork and pation</p>
+       </div>
+  </section>
+  <div>
+    <video>
+       
+    </video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/JEAYNvLs5nQ?si=4R4tALQuDQNsS7sj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+    </main>
 </body>
 </html>
