--- a/index.html
+++ b/index.html
@@ -71,12 +71,47 @@
         <p>Web Development is a great work in global,it's a strong skill that we earn by hardwork and pation</p>
        </div>
   </section>
-  <div>
-    <video>
-       
-    </video>
+  <div class="frame">
+<div class="bingo">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/JEAYNvLs5nQ?si=4R4tALQuDQNsS7sj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+</div>
   </div>
+<div>
+    <h2 style="text-align: center;">My Current Target</h2>
+    <p style="text-align: center;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, aspernatur.</p>
+</div>
+<section class="skills">
+    <div class="skill-1">
+        <img src="./assets/html.png" alt=""></img>
+        <h5 class="skill-title">HTML</h5>
+        <p class="skill-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+        <a href="">learn more</a>
+      </div>
+      <div class="skill-2">
+        <img src="./assets/css.png" alt="">
+        <h5 class="skill-title">CSS</h5>
+        <p class="skill-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+        <a href="">learn more</a>
+      </div>
+      <div class="skill-3">
+        <img src="./assets/js.png" alt="">
+        <h5 class="skill-title">JavaScript</h5>
+        <p class="skill-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+        <a href="">learn more</a>
+      </div>
+</section>
+   <section class="support">
+    <div class="sup">
+     <h2 style="text-align: center; color: white;">I Need support</h2>
+     <p style="text-align: center; color: white;">please give your hand and take me in upper on mountain</p>
+    </div>
+    <div>
+        <input type="text" placeholder="Write your optional feedback">
+        <input type="submit" value="Submit">
+    </div>
+   </section>
+
     </main>
 </body>
 </html>
