--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
        <section class="section-1">
         <div class="left-1">
             <h3>I will Do Coding and Change The <br>World</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>
+                Coding is a great vertu ,this is enough to changing global 
+            </p>
             <button>Learn More</button>
         </div>
         <div>
@@ -46,7 +48,7 @@
         </div>
         <div class="right-2">
             <h3>I will help People by creating Modern <br> Web System</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Inshallah , One day when i become a Developer,I will help People</p>
             <button>Learn more</button>
         </div>
        </section>
@@ -56,7 +58,7 @@
             I will Do Coding and Change The World
         </h3>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+           Coding is a great vertu ,this is enough to changing global
         </p>
         <button> Learn More</button>
         </div>
@@ -79,25 +81,25 @@
   </div>
 <div>
     <h2 style="text-align: center;">My Current Target</h2>
-    <p style="text-align: center;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit, aspernatur.</p>
+    <p style="text-align: center;">I will learn so many section in web proggramming, for my life change</p>
 </div>
 <section class="skills">
     <div class="skill-1">
         <img src="./assets/html.png" alt=""></img>
         <h5 class="skill-title">HTML</h5>
-        <p class="skill-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+        <p class="skill-desc">This is help us creating a beautifull web site</p>
         <a href="">learn more</a>
       </div>
       <div class="skill-2">
         <img src="./assets/css.png" alt="">
         <h5 class="skill-title">CSS</h5>
-        <p class="skill-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+        <p class="skill-desc">This is help us for visualaization in our every web page</p>
         <a href="">learn more</a>
       </div>
       <div class="skill-3">
         <img src="./assets/js.png" alt="">
         <h5 class="skill-title">JavaScript</h5>
-        <p class="skill-desc">Lorem Ipsum is simply dummy text of the printing.</p>
+        <p class="skill-desc">I don't know what kind of language is this, its might be style language</p>
         <a href="">learn more</a>
       </div>
 </section>
@@ -106,7 +108,7 @@
      <h2 style="text-align: center; color: white;">I Need support</h2>
      <p style="text-align: center; color: white;">please give your hand and take me in upper on mountain</p>
     </div>
-    <div>
+    <div class="in">
         <input type="text" placeholder="Write your optional feedback">
         <input type="submit" value="Submit">
     </div>
@@ -114,4 +116,12 @@
 
     </main>
 </body>
+<footer class="foot">
+    <div class="icone">
+        <h4>AN open commitment by Jubayer Ahmad</h4>
+    </div>
+    <div class="icone">
+        <img src="./assets/facebook.png" alt=""><a href=""></a></img><img src="./assets/github.png" alt=""><a href=""></a></img><img src="./assets/linkedin-icon 1.png" alt=""><a href=""></a></img>
+    </div>
+</footer>
 </html>
