5th and last assaignment commit

--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <header>
     <!-- banner -->
      <section class="banner">
+        <div class="banner-image">
+            <img src="./assets/Group.png" alt="">
+        </div>
         <div>
             <h2 class="banner-h1">"In the near future, I hope to become a <br> Developer."</h2>
             <p class="banner-h2">When was a kid, I had to learn some language to express myself. With that foundation, <br> our brain can build on that as we learn a second or third language using syntax and grammar.</p>
         </div>
-        <div class="banner-image">
-            <img src="./assets/Group.png" alt="">
-        </div>
-       <div id="btn">
-        <button class="banner-btn">Contact with me</button>
-       </div>
+       
+        <a href="#footer" class="banner-btn">Contact with me</a>
+       <!-- <div id="btn"> -->
+       <!-- </div> -->
      </section>
 </header>
 <body>
@@ -28,6 +29,7 @@
   <section class="article-section-1">
     <div id="head">
         <h2>Why Web Development??</h2>
+        <br>
         <p>Web Development is a great work in global,it's a strong skill that we earn by hardwork and pation</p>
        </div>
        <section class="section-1">
@@ -69,8 +71,9 @@
   </section>
   <section class="easy">
     <div id="header">
-        <h2>Why Web Development??</h2>
-        <p>Web Development is a great work in global,it's a strong skill that we earn by hardwork and pation</p>
+        <h2>My Inspiration</h2>
+        <br>
+        <p>proggraming hero is my Inspiration for zero to become one challenge</p>
        </div>
   </section>
   <div class="frame">
@@ -80,7 +83,8 @@
 </div>
   </div>
 <div>
-    <h2 style="text-align: center;">My Current Target</h2>
+    <h2 style="text-align: center; margin-top: 20px; ">My Current Target</h2>
+    <br>
     <p style="text-align: center;">I will learn so many section in web proggramming, for my life change</p>
 </div>
 <section class="skills">
@@ -116,12 +120,15 @@
 
     </main>
 </body>
-<footer class="foot">
+<footer id="footer" class="foot">
     <div class="icone">
         <h4>AN open commitment by Jubayer Ahmad</h4>
     </div>
     <div class="icone">
-        <img src="./assets/facebook.png" alt=""><a href=""></a></img><img src="./assets/github.png" alt=""><a href=""></a></img><img src="./assets/linkedin-icon 1.png" alt=""><a href=""></a></img>
+  <a href="https://www.facebook.com/"><img src="./assets/facebook.png" alt="">
+     </img></a>
+    <a href="https://github.com/github"><img src="./assets/github.png" alt=""></img></a>
+    <a href="https://www.linkedin.com/feed/"><img src="./assets/linkedin-icon 1.png" alt=""></img></a>
     </div>
 </footer>
 </html>
